@@ -80,6 +80,16 @@ void WorldSession::HandleGroupInviteOpcode(WorldPacket& recvData)
     // no player
     if (!player)
     {
+        // If Fake WHO List system is on and the invited is fake, we return that he's already in a group
+        if (sWorld->getBoolConfig(CONFIG_FAKE_WHO_LIST))
+        {
+            QueryResult result = CharacterDatabase.PQuery("SELECT guid FROM characters WHERE name = '%s' AND online > 1", membername.c_str());
+            if (result)
+            {
+                SendPartyResult(PARTY_OP_INVITE, membername, ERR_ALREADY_IN_GROUP_S);
+                return;
+            }
+        }
         SendPartyResult(PARTY_OP_INVITE, membername, ERR_BAD_PLAYER_NAME_S);
         return;
     }
